COMMIT_DL_DOMICILE

--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,48 @@
 
 
 
+	<!-- ================================== -->
+	<!--               BUILD                -->
+	<!-- ================================== -->
+	<!-- Définition de la Structure du projet Maven -->
+	<!-- ATTENTION : bien mettre des slash '/' et pas des antislashes '\' pour 
+		garantir la compatibilité avec LINUX -->
 
 	<build>
+	
+		<!-- ====================== -->
+		<!-- CHEMINS ET REPERTOIRES -->
+		<!-- ====================== -->
+
+		<!-- CREER A LA MAIN SI MANQUANT -->
+		
+		<!-- REPERTOIRE DES BUILDS (target)-->
+		<directory>${project.basedir}/target</directory>
+		<!-- Répetoire des classes compilées -->
+		<outputDirectory>${project.build.directory}/classes</outputDirectory>
+
+		<!-- REPERTOIRE DES SOURCES (target)-->
+		<!-- Répertoire des src Java. -->
+		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+		<!-- Répertoire des scripts (scripts SQL ou Batch) -->
+		<scriptSourceDirectory>${project.basedir}/src/main/scripts</scriptSourceDirectory>
+		<!-- Répertoire des Tests src Java. -->
+		<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+		
+		<!-- Répetoire des classes compilées de test -->
+		<testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>${project.basedir}/src/test/resources</directory>
+			</testResource>
+		</testResources>
+
+	
 		<plugins>
 			<plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
